# cookiecutter-bot-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.template  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
{{cookiecutter.project_slug}}/dockerization/: Dockerfile  db_init.sql  dev.Dockerfile
{{cookiecutter.project_slug}}/dockerization/nginx/: nginx.conf  site.conf
{{cookiecutter.project_slug}}/src/: settings.py  urls.py
{{cookiecutter.project_slug}}/src/bot_app/handlers/: base.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/templates/: start.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: apps.py  bot.py  bot_config.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/handlers/: __init__.py  error.py  examples.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/management/commands/: start_polling.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: error.html
