[tool.ruff]
line-length = 100
indent-width = 4

target-version = "py311"

exclude = [
    ".git",
    ".mypy_cache",
    ".venv",
    "_build",
    "build",
    ".*/migrations",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
python-telegram-bot = {extras = ["ext"], version = "^21.10"}
beautifulsoup4 = "^4.12.3"
django-environ = "^0.12.0"
psycopg2 = "^2.9.10"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
